fix(html) : Fix overlap of contents on low-width devices
Fix 1.4.10 for #3654

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a, a:link, a:active, a:visited {
 a:hover {
 	text-decoration: underline;
 }
-h1 {height:50px;margin:0;float:right;max-width:500px;}
+h1 {text-wrap:balance;margin:0;float:right;max-width:500px;}
 h1 a {text-align:right;font-size:20px;float:right;}
 h1 a, h1 a:link, h1 a:active, h1 a:visited {color:#2a85b3}
 h1 a:hover{text-decoration:none;}
@@ -135,7 +135,7 @@ tr.edit-row  input.short {
 #new_url #feedback .fail {
 	color:#f55;
 }
-#add-url {width:400px}
+#add-url {max-width:400px}
 td.url small a{
 	color:#bbc;
 }
